# CCXT-CPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  code review.md  main.cpp  main_simple.cpp  test_main.cpp
examples/: example_improved.cpp
src/: deribit.cpp  deribit_improved.cpp
src/base/: exchange.hpp
src/include/: deribit.hpp  deribit_improved.hpp  exceptions.hpp  types.hpp  utils.hpp
test/: test_deribit.cpp
